# oro

./: commands.md  docker-compose.yml  requirements.txt
docker/proxy/: model_pairs.json
docker/validator/: pyproject.toml
myagent/: agent.py
myagent/problems/problem_suite_v3/: problem-000.json  problem-000.jsonl  problem-001.json  problem-001.jsonl  problem-002.json  problem-002.jsonl  problem-003.json  problem-003.jsonl  problem-004.json  problem-004.jsonl  problem-005.json  problem-005.jsonl  problem-006.json  problem-006.jsonl  problem-007.json  problem-007.jsonl  problem-008.json  problem-008.jsonl  problem-009.json  problem-009.jsonl  problem-010.json  problem-010.jsonl  problem-011.json  problem-011.jsonl  problem-012.json  problem-012.jsonl  problem-013.json  problem-013.jsonl  problem-014.json  problem-014.jsonl  problem-015.json  problem-015.jsonl  problem-016.json  problem-016.jsonl  problem-017.json  problem-017.jsonl  problem-018.json  problem-018.jsonl  problem-019.json  problem-019.jsonl  (+22 more)
src/agent/: proxy_client.py
subnet/tests/: test_proxy_client.py
subnet/tests/validator/: test_weight_setter.py
subnet/validator/: weight_setter.py
